# assistant-server

./: .dockerignore  .env  .env-prd  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  test.http
app/: config.py  exceptions.py  main.py  schema.py
app/assistant/: __init__.py  agent.py  api_call.py  openapitool.py  sessionlog.py  sql_call.py  templates.py
app/assistant/tools/: document_retriever_tool.py  openapitool.py  sql_call.py  sqltool.py
app/crud/: metadb.py  milvus.py  schema.py
app/routers/: __init__.py  agent_router.py  assistant_router.py  crud_router.py
examples/: api_call.py  sql_call.py  sql_call_test.py  test.py
